--- a/SWP_Group6_FE/src/App.css
+++ b/SWP_Group6_FE/src/App.css
@@ -1,42 +1,33 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.row {
+  margin-bottom: 0 !important;
+  margin-left: 0;
+}
+.banner{
+background-color: #eee;
+}
+.line {
+  
+
+  background-color: rgb(228, 219, 219);
+  width: 85%;
+  height: 3px;
+  
+}
+.line1 {
+  height: 3px;
+
+  background-color: rgb(240, 228, 228);
+  width: 100%;   
+
+}
+.lineNews {
+  height: 3px;
+  background-color: rgb(240, 228, 228);
+  width: 50%;   
+
+}
+.Box {
+  display: flex;
+  justify-content: space-between;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
