update ProgramSick File

--- a/SWP_Group6_FE/src/App.css
+++ b/SWP_Group6_FE/src/App.css
@@ -30,4 +30,7 @@ background-color: #eee;
   display: flex;
   justify-content: space-between;
 }
+input, textarea {
+  border-bottom: none !important;
+}
 
